@@ -3,8 +3,13 @@ ddetect (0.103) UNRELEASED; urgency=low
   * Sven Luther
     - Added support for loading the i8042 and atkbd modules on
     powerpc/chrp and prep in order to have keyboard input :).
+  * Joshua Kwan
+    - Use devnames descriptions for ethdetect.sh where possible.
+    - Create 'BLACKLIST' entries for stuff that shouldn't be seen in
+      ethdetect's module loading menu.
+    - Update a whole ton of descriptions.
 
- -- Sven Luther <luther@debian.org>  Mon, 28 Jun 2004 14:25:16 +0200
+ -- Joshua Kwan <joshk@triplehelix.org>  Wed, 30 Jun 2004 22:43:14 -0700
 
 ddetect (0.102) unstable; urgency=low
 
